syntax = "proto3";

package coretex.v1;
option go_package = "github.com/yaront1111/coretex-os/core/protocol/pb/v1";

service SafetyKernel {
  rpc Check(PolicyCheckRequest) returns (PolicyCheckResponse);
}

enum DecisionType {
  DECISION_TYPE_UNSPECIFIED = 0;
  DECISION_TYPE_ALLOW       = 1;
  DECISION_TYPE_DENY        = 2;
}

message PolicyCheckRequest {
  string job_id = 1;
  string topic  = 2;
  string tenant = 3;
}

message PolicyCheckResponse {
  DecisionType decision = 1;
  string reason         = 2;
}
